outline for portfolio page added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>hello</h1>
-    <h2>bye</h2>
-    <h3>no way</h3>
-</body>
+  </head>
+  <body>
+    <header>
+        <a class="logo" href="#"><h1>My Portfolio</h1></a>
+      <nav class="nav_bar">
+        <ul class="nav_links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#aboutMe">About Me</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+    <section id="projects">
+      <h2>Projects</h2>
+      <article><h3>Project</h3></article>
+      <article><h3>Project</h3></article>
+      <article><h3>Project</h3></article>
+    </section>
+
+    <section id="aboutMe">
+      <h2>About Me</h2>
+      <p>
+        Hi Im alex and I am a motivated and passionate junior software engineer
+        with a strong foundation in HTML, CSS, and JavaScript. I recently
+        completed a coding bootcamp where I gained hands-on experience in web
+        development and built several projects using these technologies. I pride
+        my self on my keen eye for detail and a dedication to writing clean and
+        efficient code, I am eager to apply these newly obtained skills in a
+        professional environment. I have a solid understanding of front-end
+        development principles and I'm constantly expanding my knowledge through
+        self-study and online resources. Although my experience may seem to be
+        limited, I possess excellent problem-solving skills and a willingness to
+        learn and grow as a developer. I'm a team player who communicates
+        effectively and is always eager to collaborate with others to achieve
+        project goals. I am excited about the opportunity to contribute to
+        meaningful projects and I'm actively seeking an entry-level position or
+        internship where I can continue to enhance my skills and make a positive
+        impact on the world of software development.
+      </p>
+    </section>
+
+    <footer>footer</footer>
+  </body>
 </html>
