--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <figure class="hero">
         <img
           class="myphoto"
-          src="/images/IMG_0019.jpg"
+          src="/images/portfolioimg.png"
           alt="Photo of Alex. Your software engineer"
-          width="400"
+          width="450"
         />
         <a class="logo" href="#"
           ><h1 class="hero-title">
@@ -73,7 +73,7 @@
               target="_blank"
               ><img
                 class="portfolio-screenshot"
-                src="/images/newscreenshot.png"
+                src="/images/screen_shot.png"
                 alt="screenshot of portfolio project"
                 width="200"
             /></a>
@@ -89,7 +89,7 @@
             <h3 class="project-title">E-commerce site</h3>
             <a href="#" class="project-link">Coming Soon</a>
             <p class="project-description">
-              The website features an intuitive and user-friendly interface that
+              This project features an intuitive and user-friendly interface that
               allows visitors to browse through various product categories,
               search for specific items, and view detailed product descriptions,
               including images, prices, and customer reviews.
@@ -99,9 +99,7 @@
             <h3 class="project-title">Youtube clone</h3>
             <a href="#" class="project-link">Coming Soon</a>
             <p class="project-description">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-              similique adipisci sed deleniti iusto dolorum et libero voluptatem
-              dignissimos facilis, tempora autem, dolor ducimus omnis.
+              In this project I that replicated the core functionality and design elements of the popular video-sharing platform, YouTube. This project was fun because I was able to apply HTML, CSS and JavaScript in one project.
             </p>
           </article>
         </div>
