--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
         <div class="skill-3">JavaScript</div>
         <div class="skill-4">JAVA</div>
       </div>
-
-
     </section>
     <section id="projects">
       <h2 class="projects-title">Projects</h2>
@@ -89,8 +87,8 @@
             <h3 class="project-title">E-commerce site</h3>
             <a href="#" class="project-link">Coming Soon</a>
             <p class="project-description">
-              This project features an intuitive and user-friendly interface that
-              allows visitors to browse through various product categories,
+              This project features an intuitive and user-friendly interface
+              that allows visitors to browse through various product categories,
               search for specific items, and view detailed product descriptions,
               including images, prices, and customer reviews.
             </p>
@@ -99,7 +97,10 @@
             <h3 class="project-title">Youtube clone</h3>
             <a href="#" class="project-link">Coming Soon</a>
             <p class="project-description">
-              In this project I that replicated the core functionality and design elements of the popular video-sharing platform, YouTube. This project was fun because I was able to apply HTML, CSS and JavaScript in one project.
+              In this project I that replicated the core functionality and
+              design elements of the popular video-sharing platform, YouTube.
+              This project was fun because I was able to apply HTML, CSS and
+              JavaScript in one project.
             </p>
           </article>
         </div>
@@ -109,8 +110,12 @@
     <footer id="footer">
       <article class="contact-links">
         <h3>Contact Me</h3>
-        <a href="https://github.com/alexjcomic" target="blank" >GitHub</a>
-        <a href="https://www.linkedin.com/in/alexander-johnson-1807a8278/" target="blank">LinkedIn</a>
+        <a href="https://github.com/alexjcomic" target="blank">GitHub</a>
+        <a
+          href="https://www.linkedin.com/in/alexander-johnson-1807a8278/"
+          target="blank"
+          >LinkedIn</a
+        >
         <a href="https://twitter.com/alexj_devit" target="blank">Twitter</a>
       </article>
     </footer>
