--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           alt="Photo of Alex. Your software engineer"
           width="450"
         />
-        <a class="logo" href="#"
+        <a class="logo" href="#projects"
           ><h1 class="hero-title">
             Hi I'm Alex.<br /><span>Your Developer.</span> <br />
             How can I help you?
