--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="about-content">
         <p>
-          Hi Im Alex, I'm a motivated and passionate Junior software engineer
+          Hi I'm Alex, I'm a motivated and passionate Junior software engineer
           with a strong foundation in HTML, CSS, and JavaScript. I recently
           completed a coding bootcamp where I gained hands-on experience in web
           development and built several projects using these technologies. I
@@ -76,7 +76,7 @@
                 width="200"
             /></a>
             <p class="project-description">
-              In this project I used HTML and CSS to create user-friendly user
+              In this project I used HTML and CSS to create a user-friendly user
               interface. I utilized a code structure that is organized with
               semantic tags to enhance accessibility and search engine
               optimization.
