--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           src="/images/portfolioimg.png"
           alt="Photo of Alex. Your software engineer"
           width="450"
+          height="400"
         />
         <a class="logo" href="#projects"
           ><h1 class="hero-title">
